[package]
name = "locat"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Findit-AI/locat"
homepage = "https://github.com/Findit-AI/locat"
documentation = "https://docs.rs/locat"
description = "A zero-copy ISO 6709 geographic coordinate parser in Rust."
license = "MIT OR Apache-2.0"
rust-version = "1.85"
keywords = ["iso6709", "geographic", "coordinates", "latitude", "longitude"]
categories = ["parser-implementations", "no-std::no-alloc", "encoding"]

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = []
std = ["thiserror/std"]

[dependencies]
derive_more = { version = "2", default-features = false, features = ["display", "is_variant", "unwrap", "try_unwrap"] }
logos = { version = "0.16", default-features = false, features = ["export_derive"] }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
